STABLE: Implement game event listing and event creation.